--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@jsonresume/schema": "^1.2.1",
+    "@langchain/community": "^0.3.37",
+    "@langchain/core": "^0.3.43",
+    "@langchain/openai": "^0.5.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-form": "^0.1.2",
     "@radix-ui/react-label": "^2.1.2",
