--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@langchain/community": "^0.3.37",
     "@langchain/core": "^0.3.43",
     "@langchain/openai": "^0.5.0",
+    "@prisma/client": "^6.5.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-form": "^0.1.2",
     "@radix-ui/react-label": "^2.1.2",
@@ -24,6 +25,7 @@
     "lucide-react": "^0.485.0",
     "next": "15.2.4",
     "pdf-parse": "^1.1.1",
+    "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
